se actualiza la URL de JQuery a una más reciente. Se arregla el estilo de la x en css ya que no era visible para cerrar modals. Se coloca una correcta descripción en las imágenes para que puedan ser ubicadas correctamente por los buscadores

--- a/css/styles.css
+++ b/css/styles.css
@@ -970,14 +970,12 @@ main p {
     /* Limitar el ancho máximo del modal */
 }
 
-
-
 .close {
     position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #fff;
-    font-size: 40px;
+    top:65px;
+    right: 65px;
+    color: var(--primary-color);
+    font-size: 30px;
     font-weight: bold;
     transition: 0.3s;
 }
